--- a/Parametrizador/Parametrizador.csproj
+++ b/Parametrizador/Parametrizador.csproj
@@ -39,6 +39,8 @@
     <Reference Include="FontAwesome.Sharp, Version=5.15.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\FontAwesome.Sharp.5.15.3\lib\net472\FontAwesome.Sharp.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="Syncfusion.Grid.Base, Version=18.2460.0.44, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89" />
     <Reference Include="Syncfusion.Grid.Windows, Version=18.2460.0.44, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89" />
     <Reference Include="Syncfusion.Shared.Base, Version=18.2460.0.44, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89, processorArchitecture=MSIL" />
@@ -53,6 +55,7 @@
     <Reference Include="System.Drawing.Design" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Runtime.Serialization.Formatters.Soap" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -62,8 +65,17 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationProvider" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cookies\CookieMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Cookies\CookieMain.Designer.cs">
+      <DependentUpon>CookieMain.cs</DependentUpon>
+    </Compile>
     <Compile Include="Hard Sweet\HSMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -119,6 +131,9 @@
     <Compile Include="Main\Splash.Designer.cs">
       <DependentUpon>Splash.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Cookies\CookieMain.resx">
+      <DependentUpon>CookieMain.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Hard Sweet\FormFormaçãoHS.resx">
       <DependentUpon>FormFormaçãoHS.cs</DependentUpon>
     </EmbeddedResource>
@@ -214,9 +229,6 @@
     <None Include="Resources\maizena.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\maria01-1.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\imgbertolino.jpg" />
   </ItemGroup>
   <ItemGroup>
@@ -227,6 +239,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\imgmoretto.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rosquinha.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\maria01-1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
