--- a/Parametrizador/Parametrizador.csproj
+++ b/Parametrizador/Parametrizador.csproj
@@ -371,5 +371,8 @@
   <ItemGroup>
     <None Include="Resources\maria01-1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\shortdough.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
