atualizações: correções na pasta resources; adições de funções necessárias para a formulação do relatório; adição de botão de impressão no meu flutuante;

--- a/Parametrizador/Parametrizador.csproj
+++ b/Parametrizador/Parametrizador.csproj
@@ -396,5 +396,8 @@
   <ItemGroup>
     <None Include="Resources\m-dias-branco-mdb_azul.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logotiny.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
